--- a/app/views/sections/register0.html.haml
+++ b/app/views/sections/register0.html.haml
@@ -10,16 +10,16 @@
       %hr{ style: "margin-top:0; "}
       .professional_mb
         .header
-          %h2 MetaBright is the game that can land you your next job or internship opportunity.
+          %h2 MetaBright is the game that can land you your next job or internship.
         .body
           %h4 How does it work?
-          %p If you choose to enable the OppBot feature, MetaBright will constantly work in the background to anonymously match you with opportunities based on your skills.
+          %p MetaBright can anonymously match you with opportunities based on your skills.
           %h4 But I already have a job...
           %p You never know if a better job is just around the corner. MetaBright can keep an eye out for you. Best of all, your status is totally private - your boss will never know!
-          %h4 What if I just want to play the game?
-          %p Then you're in good company! Lots of folks use MetaBright just to prove themselves, sharpen their skills and interact with a community that shares their interests!
           %h4 Can I improve my score?
           %p You bet. There are a bunch of ways to earn points, and you can retake questions you might have missed.
+          %h4 What if I just want to play the game?
+          %p Then you're in good company! Lots of folks use MetaBright just to prove themselves, sharpen their skills, and interact with a community that shares their interests!
           %h4 Can I change my mind?
           %p Yes. It's as simple as changing a setting on your profile.          
         .signup{ style: ""}
