--- a/app/views/users/professional.html.haml
+++ b/app/views/users/professional.html.haml
@@ -1,17 +1,14 @@
-<link rel="stylesheet" href="http://www.larentis.eu/switch/bootstrapSwitch.css">
-<script src="http://www.larentis.eu/switch/bootstrapSwitch.js"></script>
-
 %div{ style: "background-color: white; border-radius: 4px; padding:8px; width: 923px;" }
   :css
     form .control-group label.control-label { width: 160px; }
   %img{ style:"display:inline; height:115px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
   %span{ style: "font-size: 50px;position: relative;top:13px;" } Professional Settings
   %hr{style:"margin:0;"}
-  = form_for(@notification_settings, url: notification_settings_path(@user.signup_token), html: { class: "form-horizontal", style: "margin-top: 10px;" }) do |f|
+  = form_for(@user, url: professional_settings_path(@user.signup_token), html: { class: "form-horizontal", style: "margin-top: 10px;" }) do |f|
     = render 'shared/error_messages', object: f.object
     %div.notificationpanelbody
-      %h4{ style: "display: inline-block; margin-bottom: 20px;  "} Do you want MetaBright to match you with opportunities that fit your skills?
-      %div.switch{ style: "float: right;"}
+      %h4{ style: "display: inline-block; margin-bottom: 20px;  "} You #{@user.professional_enabled? ? "have" : "haven't"} enabled MetaBright to match you with opportunities that fit your skills.
+      %div.switch{ style: "float: right; display: none;"}
         %input{type:"checkbox"}
       
       %h4 What types of opportunites are you interested in?
@@ -21,36 +18,30 @@
           %div.control-group
             %label.control-label Yes!
             %div.controls
-              = f.check_box :interaction
+              = f.check_box :wants_full_time
         %div
           %h5 Part time job or freelancing
           %div.control-group
             %label.control-label Yes!
             %div.controls
-              = f.check_box :powers
+              = f.check_box :wants_part_time
         %div
           %h5 Internship
           %div.control-group
             %label.control-label Yes!
             %div.controls
-              = f.check_box :weekly     
+              = f.check_box :wants_internship     
       %h4 What location are you interested in?
       %div.settingsmanagementarea
         %div
           %label Country
-          = f.country_select, priority: %w(US GB CA IN DE KE NL FR), prompt: 'Please select a country'
+          = f.country_select :country, priority: %w(US GB CA IN DE KE NL FR), prompt: 'Please select a country'
         %div
           %label State/Province
-          = render "subregion_select", { form: f }
+          = render "sections/subregion_select", { form: f }
         %div{ style: "margin-right: 0;"}
           %label City
-          = f.text_field, style: "width: 187px;", placeholder:"Please enter your city"
-        %div
-          %h5 Do you have work authorization for this location?
-          %div.control-group
-            %label.control-label Yes!
-            %div.controls
-              = f.check_box   
+          = f.text_field :city, style: "width: 187px;", placeholder:"Please enter your city"
 
       %hr
       %div.control-group
