Fixing error checking.

--- a/app/views/sections/register1.html.haml
+++ b/app/views/sections/register1.html.haml
@@ -9,9 +9,11 @@
       var city = $("#user_city").val();
 
       var error = ""
-      if(country == ""){ error = "Please select a country." }
-      if(subregion == ""){ error = "Please select a state or province." }
       if(city == ""){ error = "Please enter a city." }
+      if(subregion == ""){ error = "Please select a state or province." }
+      if(country == ""){ error = "Please select a country." }
+      
+      
 
       if(error != ""){
         $(this).find(".errors").show().text(error);
@@ -31,31 +33,30 @@
       .professional_mb_form{ style: "margin-top:15px;"}
         .body
           = form_for current_user, url: finish_section_path(@section, @session_id, s: 2) do |f|
+            %h4 What opportunities might interest you?
             - if @error
               %p.errors{ style: "color: #b94a48;" }= @error
             - else
-              %h4 
-                What opportunities might interest you?
-              %label.checkbox
-                Full time job
-                = f.check_box :wants_full_time
-              %label.checkbox
-                Part time job or freelancing
-                = f.check_box :wants_part_time
-              %label.checkbox
-                Internship
-                = f.check_box :wants_internship
-              %h4
-                What's your location?
-              %div{ style: "display: block; "}
-                %label Country
-                = f.country_select :country, priority: %w(US GB CA IN DE KE NL FR), prompt: 'Please select a country'
-              %div
-                %label State/Province
-                = render "subregion_select", { form: f }
-              %div{ style: "margin-right: 0;"}
-                %label City
-                = f.text_field :city, style: "width: 187px;", placeholder:"Please enter your city"
-              %div{ style: "margin: 15px 0 0 0; width: 100%;"}
-                = f.submit "Continue to Register", class: "button button-actionable", style: "float: right;"
-                = link_to "Back", finish_section_path(@section, @session_id, s:0), class: "button button-standard", style: "float: left; margin-left: -20px; "
+              %p.errors.hide{ style: "color: #b94a48;" }
+            %label.checkbox
+              Full time job
+              = f.check_box :wants_full_time
+            %label.checkbox
+              Part time job or freelancing
+              = f.check_box :wants_part_time
+            %label.checkbox
+              Internship
+              = f.check_box :wants_internship
+            %h4 What's your location?
+            %div{ style: "display: block; "}
+              %label Country
+              = f.country_select :country, priority: %w(US GB CA IN DE KE NL FR), prompt: 'Please select a country'
+            %div
+              %label State/Province
+              = render "subregion_select", { form: f }
+            %div{ style: "margin-right: 0;"}
+              %label City
+              = f.text_field :city, style: "width: 187px;", placeholder:"Please enter your city"
+            %div{ style: "margin: 15px 0 0 0; width: 100%;"}
+              = f.submit "Continue to Register", class: "button button-actionable", style: "float: right;"
+              = link_to "Back", finish_section_path(@section, @session_id, s:0), class: "button button-standard", style: "float: left; margin-left: -20px; "
