--- a/app/views/sections/register0.html.haml
+++ b/app/views/sections/register0.html.haml
@@ -13,7 +13,7 @@
           %h2 MetaBright is the game that can land you your next job or internship.
         .body
           %h4 How does it work?
-          %p MetaBright can anonymously match you with opportunities based on your skills.
+          %p MetaBright can work constantly in the background to anonymously match you with opportunities based on your skills.
           %h4 But I already have a job...
           %p You never know if a better job is just around the corner. MetaBright can keep an eye out for you. Best of all, your status is totally private - your boss will never know!
           %h4 Can I improve my score?
