--- a/app/views/companies/users.html.haml
+++ b/app/views/companies/users.html.haml
@@ -25,7 +25,7 @@
           %td= link_to u.visits.last.try{ |v| v.request_url.split("/").last(2).join("/").slice(0..20) }, admin_user_details_path(u.id)
           %td= u.created_at.strftime("%m/%d/%Y")
           %td= u.earned_points
-          %td= u.completed_tasks.size
+          %td= u.completed_tasks.where("status_id >= ?", 0).count
           %td= u.enrollments.size
           %td= u.votes.size
           %td= u.comments.size
