--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -28,10 +28,13 @@
           - if current_user
             %li.navuser
               %div.dropdown.pull-right
-                %a.dropdown-toggle{ "data-toggle" => "dropdown"}
-                  = image_tag current_user.picture, style: "width: 17px; height: 17px; vertical-align: middle;", alt: "#{@current_user.name}"
-                  %span.users_name{ style: "vertical-align: middle;" }= current_user.name 
-                  %span.caret
+                - if current_user.guest_user?
+                  %a.button.btn-danger.login_link{ style: "padding:3px 7px; border-radius:2px; margin-top:6px; margin-right: 17px; text-shadow:none; color:white;" } Sign up
+                - else
+                  %a.dropdown-toggle{ "data-toggle" => "dropdown"}
+                    = image_tag current_user.picture, style: "width: 17px; height: 17px; vertical-align: middle;", alt: "#{@current_user.name}"
+                    %span.users_name{ style: "vertical-align: middle;" }= current_user.name 
+                    %span.caret
                 %ul.dropdown-menu{ role: "button", style: "padding: 0; top:42px; right:-138px; min-width: 312px; min-height: 135px;" }
                   %div
                     %div.nub{ style: "left:150px;" }
