--- a/app/views/sections/register2.html.haml
+++ b/app/views/sections/register2.html.haml
@@ -25,26 +25,33 @@
   %div.quizspace
     %div.professional_mb_register
       = image_tag GIANT_STONEY, style: "width:52px; height:62px; margin:0; display: inline-block; vertical-align: top;", alt: "Stoney"
-      %div{ style: "display: inline-block; margin-left: 8px; font-size:40px; line-height:56px; "}
-        You're almost done!
-      %h4 Choose how you want to register to save your preferences and get back to earning points.
-      .signup
-        = link_to "/auth/google_oauth2", style: "display: inline-block; margin-right: 40px; margin-bottom: 0;", class: "button button-info" do
-          = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
-          %span.landingbuttontext Sign up with Google »
+      - if current_user.guest_user?
+        %div{ style: "display: inline-block; margin-left: 8px; font-size:40px; line-height:56px; "}
+          You're almost done!
+        %h4 Choose how you want to register to save your preferences and get back to earning points.
+        .signup
+          = link_to "/auth/google_oauth2", style: "display: inline-block; margin-right: 40px; margin-bottom: 0;", class: "button button-info" do
+            = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
+            %span.landingbuttontext Sign up with Google »
   
-        = link_to "/auth/facebook", style: "display: inline-block;", class: "button button-info" do
-          = image_tag ICON_LOGIN_FACEBOOK, alt: "Facebook sign up"
-          %span.landingbuttontext Sign up with Facebook »
-        .divider OR
-        = form_for(current_user, url: finish_section_path(@section, @session_id, s: 3)) do |f|
-          - if @error
-            %p.errors{ style: "color: #b94a48;" }= @error
-          - else
-            %p.errors.hide{ style: "color: #b94a48;" }
-          = f.text_field :name, value: nil, placeholder: "Name"
-          = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
-          = f.password_field :password, value: nil, placeholder: "Password"
-          %div{ style: "margin: 10px 0 0 0;" }
-            = f.submit "Submit", class: "button button-actionable", style: "float: right; width: auto; "
-            = link_to "Back", finish_section_path(@section, @session_id, s: 1), class: "button button-standard", style: "float: left; width: auto; "
+          = link_to "/auth/facebook", style: "display: inline-block;", class: "button button-info" do
+            = image_tag ICON_LOGIN_FACEBOOK, alt: "Facebook sign up"
+            %span.landingbuttontext Sign up with Facebook »
+          .divider OR
+          = form_for(current_user, url: finish_section_path(@section, @session_id, s: 3)) do |f|
+            - if @error
+              %p.errors{ style: "color: #b94a48;" }= @error
+            - else
+              %p.errors.hide{ style: "color: #b94a48;" }
+            = f.text_field :name, value: nil, placeholder: "Name"
+            = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
+            = f.password_field :password, value: nil, placeholder: "Password"
+            %div{ style: "margin: 10px 0 0 0;" }
+              = f.submit "Submit", class: "button button-actionable", style: "float: right; width: auto; "
+              = link_to "Back", finish_section_path(@section, @session_id, s: 1), class: "button button-standard", style: "float: left; width: auto; "
+      - else
+        %div{ style: "display: inline-block; margin-left: 8px; font-size:40px; line-height:56px; "}
+          You're all done!
+        %h4 We'll send you any opportunities we find that match your skills!
+        %div{ style: "margin: 20px 0 0 0; text-align: center;" }
+          = link_to "Continue", challenge_path(@path.permalink, c: true, sh: true), class: "button button-large button-actionable"
