internship added to footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,5 +6,7 @@
     =link_to "Feedback", ideas_path 
     \/
     = link_to "Terms of Service", tos_path
+    \/
+    = link_to "Internship", internship_path
 %div.feedback_tab
   =link_to "Feedback", ideas_path 
