--- a/app/views/sections/register1.html.haml
+++ b/app/views/sections/register1.html.haml
@@ -50,7 +50,7 @@
             %h4 What's your location?
             %div{ style: "display: block; "}
               %label Country
-              = f.country_select :country, priority: %w(US GB CA IN DE KE NL FR), prompt: 'Please select a country'
+              = f.country_select :country, priority: %w(US GB CA FR DE IN KE NL), prompt: 'Please select a country'
             %div
               %label State/Province
               = render "subregion_select", { form: f }
