--- a/app/views/sections/register2.html.haml
+++ b/app/views/sections/register2.html.haml
@@ -53,9 +53,20 @@
         %div{ style: "display: inline-block; margin-left: 8px; font-size:46px; line-height:63px; "}
           You're all done!
         %h4 We'll send you new opportunities that match your skills on MetaBright.
-        %div{ style: "text-align: center; margin-top: 10px; "}
+        %div{ style: "text-align: center; margin-top: 6px; "}
           = image_tag LIGHT_BULB_URL, style: "display: inline-block; width: 16px; height: 16px; position: relative; bottom: 2px; "
           %h5{ style: "display: inline-block;"} The more questions you answer, the better your chances of getting a good match! 
+        %div{ style: "border-radius: 6px; border: 1px solid rgba(0, 0, 0, 0.1); width: 67%; margin: 22px auto; text-align: center; " }
+          %div{ style: "border-radius: 6px 6px 0 0; background-color: #FCFCFC; padding: 8px 0; text-transform: uppercase; "}
+            %h5{ style: "font-size: 13px;"} Let your friends know about MetaBright
+          %hr{ style: "margin:0; "}
+          %div{ style: "padding: 6px 12px; height: 45px; "}
+            %a{ style: "position: relative; top: 9px; float:left; display: inline-block; margin-right: 10px; font-size: 17px;", onclick: sharing_popup_javascript(:facebook, "http://www.metabright.com", "Check out @MetaBright! It's a game that can help get you a job or internship!") }
+              On Facebook
+              %img{ style: "height: 30px; width: 30px; margin-left: 12px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/facebook_logo.png"}
+            %a{ style: "float: right; display: inline-block;font-size: 17px;", onclick: sharing_popup_javascript(:twitter, "http://www.metabright.com", "Check out @MetaBright! It's a game that can help get you a job or internship!") } 
+              On Twitter
+              %img{ style: "height: 48px; ", src:"https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/twitter_logo_blue_on_white.png"}
         %div{ style: "margin: 15px 0 0 0; text-align: center;" }
           = link_to "Continue with Challenge", continue_path_path(@section.path.permalink), class: "button button-actionable", style: "float: right; width: 176px;"
           = link_to "Go to Challenge page", challenge_path(@path.permalink, c: true, sh: true), class: "button button-info", style: "float: left; width: 176px; "
