--- a/app/views/sections/register2.html.haml
+++ b/app/views/sections/register2.html.haml
@@ -61,7 +61,7 @@
             %h5{ style: "font-size: 13px;"} Let your friends know about MetaBright
           %hr{ style: "margin:0; "}
           %div{ style: "padding: 6px 12px; height: 45px; "}
-            %a{ style: "position: relative; top: 9px; float:left; display: inline-block; margin-right: 10px; font-size: 17px;", onclick: sharing_popup_javascript(:facebook, "http://www.metabright.com", "Check out @MetaBright! It's a game that can help get you a job or internship!") }
+            %a{ style: "position: relative; top: 9px; float:left; display: inline-block; margin-left: 7px; font-size: 17px;", onclick: sharing_popup_javascript(:facebook, "http://www.metabright.com", "Check out @MetaBright! It's a game that can help get you a job or internship!") }
               On Facebook
               %img{ style: "height: 30px; width: 30px; margin-left: 12px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/facebook_logo.png"}
             %a{ style: "float: right; display: inline-block;font-size: 17px;", onclick: sharing_popup_javascript(:twitter, "http://www.metabright.com", "Check out @MetaBright! It's a game that can help get you a job or internship!") } 
