--- a/app/views/sections/register9.html.haml
+++ b/app/views/sections/register9.html.haml
@@ -45,6 +45,22 @@
           = f.text_field :name, value: nil, placeholder: "Name"
           = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
           = f.password_field :password, value: nil, placeholder: "Password"
-          %div{ style: "margin: 10px 0 0 0;" }
-            = f.submit "Submit", class: "button button-actionable", style: "float: right; width: auto;"
-            = link_to "Register later", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user), sh: true), style: "float: left; position: relative; top: 16px;"
+          = f.submit "Submit", class: "button button-small button-actionable", style: "float: right; width: auto; padding: 3px 10px;"
+          %div{ style: "margin: 10px auto 0;" }            
+            = link_to "Skip for now, and continue with Challenge", continue_path_path(@section.path.permalink), class: "button button-standard", style: "width: auto; font-size: 14px; "
+            
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
