Moving scripts around, adding funnel admin page.

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -44,7 +44,7 @@
   
   .row
     .span5
-      .leftbox{ style: "display: none;"}
+      .leftbox{ }
         .box_header  You may know
         .leftboxfooter{style:"background-color:white; padding-top: 10px; "}
           %ul.invite_tiles
