--- a/app/views/sections/register2.html.haml
+++ b/app/views/sections/register2.html.haml
@@ -28,7 +28,7 @@
       %div{ style: "display: inline-block; margin-left: 8px; font-size:40px; line-height:56px; "}
         You're almost done!
       %h4 Choose how you want to register to save your preferences and get back to earning points.
-      .signup
+      .signup_pro
         = link_to "/auth/google_oauth2", style: "display: inline-block; margin-right: 40px; margin-bottom: 0;", class: "button button-info" do
           = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
           %span.landingbuttontext Sign up with Google »
