syncing font sizes and margins across reg

--- a/app/views/sections/register9.html.haml
+++ b/app/views/sections/register9.html.haml
@@ -47,7 +47,7 @@
           = f.password_field :password, value: nil, placeholder: "Password"
           = f.submit "Submit", class: "button button-small button-actionable", style: "float: right; width: auto; padding: 3px 10px;"
           %div{ style: "margin: 10px auto 0;" }            
-            = link_to "Skip for now, and continue with Challenge", continue_path_path(@section.path.permalink), class: "button button-standard", style: "width: auto; font-size: 14px; "
+            = link_to "Skip for now and continue with Challenge", continue_path_path(@section.path.permalink), class: "button button-standard", style: "width: auto; font-size: 14px; "
             
 
 
