--- a/app/views/sections/register3.html.haml
+++ b/app/views/sections/register3.html.haml
@@ -27,4 +27,4 @@
             %img{ style: "height: 48px; ", src:"https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/twitter_logo_blue_on_white.png"}
       %div{ style: "margin: 15px 0 0 0; text-align: center;" }
         = link_to "Continue with Challenge", continue_path_path(@section.path.permalink), class: "button button-actionable", style: "float: right; width: 176px;"
-        = link_to "Go to Challenge page", challenge_path(@path.permalink, c: true, sh: true), class: "button button-info", style: "float: left; width: 176px; "
+        = link_to "Return to Challenge Home", challenge_path(@path.permalink, c: true, sh: true), class: "button button-info", style: "float: left; width: 176px; "
