--- a/app/views/pages/connect.html.haml
+++ b/app/views/pages/connect.html.haml
@@ -1,29 +1,135 @@
-.aboutcontainer{ style: "width: 940px;"}
+.aboutcontainer.connect
   .aboutbox
     .aboutheader
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
         %span Connect
-    %hr{ style: "margin:0"}
     .aboutbody
-      %h3{style: "display: inline-block;"} Invite your friends
-      %input{ type: "text", placeholder: "Search for friends...", style: "display: inline-block; float: right;"}
-      %hr{ style: "margin:0"}
-      %ul.connect_tiles
-        %li
-          %img{ src: "http://www.placekitten.com/80/80" }
-          %div
-            %h5 Nathaniel Sokoll-Ward
-            %span San Francisco
-            %a.button.button-info Invite
-        %li
-          %img{ src: "http://www.placekitten.com/80/80" }
-          %div
-            %h5 Nathaniel Sokoll-Ward
-            %span San Francisco
-            %a.button.button-info Invite
-        %li
-          %img{ src: "http://www.placekitten.com/80/80" }
-          %div
-            %h5 Nathaniel Sokoll-Ward
-            %span San Francisco
-            %a.button.button-info Invite
+      %div
+        %h3 Invite your friends
+        %input{ type: "text", placeholder: "Search for friends...", style: "display: inline-block; float: right;"}
+        %hr
+        %ul.connect_tiles
+          %li
+            %img{ src: "http://www.placekitten.com/80/80" }
+            %div
+              %h5 Nathaniel Sokoll-Ward
+              %span San Francisco
+              %a.button.button-info Invite
+          %li
+            %img{ src: "http://www.placekitten.com/87/80" }
+            %div
+              %h5 Jin Tran
+              %span Tokyo
+              %a.button.button-info Invite
+          %li
+            %img{ src: "http://www.placekitten.com/86/80" }
+            %div
+              %h5 Matt Donohue
+              %span New York City
+              %a.button.button-info Invite
+          %li
+            %img{ src: "http://www.placekitten.com/85/80" }
+            %div
+              %h5 Kimberly Miller
+              %span St. Louis
+              %a.button.button-info Invite
+          %li
+            %img{ src: "http://www.placekitten.com/83/80" }
+            %div
+              %h5 Trey Klutz
+              %span Berlin
+              %a.button.button-info Invite
+          %li
+            %img{ src: "http://www.placekitten.com/81/80" }
+            %div
+              %h5 Robert Mapplethorpe
+              %span London
+              %a.button.button-info Invite
+        %div.connect_accounts
+          Connect accounts to find more people:
+          = link_to "#" do
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+google.png", alt: "Connect Google account"}
+          = link_to "#" do
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/facebook_logo.png", alt: "Connect Facebook account"}
+          = link_to "#" do
+            %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/icon+linkedin.png", alt: "Connect LinkedIn account"}
+      %div
+        %h3 People to follow
+        %hr
+        %ul.connect_tiles
+          %li
+            %img{ src: "http://www.placekitten.com/80/80" }
+            %div
+              %h5 Nathaniel Sokoll-Ward
+              %span San Francisco
+              %a.button.button-actionable Follow
+          %li
+            %img{ src: "http://www.placekitten.com/87/80" }
+            %div
+              %h5 Jin Tran
+              %span Tokyo
+              %a.button.button-actionable Follow
+          %li
+            %img{ src: "http://www.placekitten.com/86/80" }
+            %div
+              %h5 Matt Donohue
+              %span New York City
+              %a.button.button-actionable Follow
+          %li
+            %img{ src: "http://www.placekitten.com/85/80" }
+            %div
+              %h5 Kimberly Miller
+              %span St. Louis
+              %a.button.button-actionable Follow
+          %li
+            %img{ src: "http://www.placekitten.com/83/80" }
+            %div
+              %h5 Trey Klutz
+              %span Berlin
+              %a.button.button-actionable Follow
+          %li
+            %img{ src: "http://www.placekitten.com/81/80" }
+            %div
+              %h5 Robert Mapplethorpe
+              %span London
+              %a.button.button-actionable Follow
+      %div
+        %h3 Who has viewed your profile
+        %hr
+        %ul.connect_tiles
+          %li
+            %img{ src: "http://www.placekitten.com/80/80" }
+            %div
+              %h5 Nathaniel Sokoll-Ward
+              %span San Francisco
+              %a.button.button-actionable Follow
+          %li
+            %img{ src: "http://www.placekitten.com/87/80" }
+            %div
+              %h5 Jin Tran
+              %span Tokyo
+              %a.button.button-success Following
+          %li
+            %img{ src: "http://www.placekitten.com/86/80" }
+            %div
+              %h5 Matt Donohue
+              %span New York City
+              %a.button.button-actionable Follow
+          %li
+            %img{ src: "http://www.placekitten.com/85/80" }
+            %div
+              %h5 Kimberly Miller
+              %span St. Louis
+              %a.button.button-success Following
+          %li
+            %img{ src: "http://www.placekitten.com/83/80" }
+            %div
+              %h5 Trey Klutz
+              %span Berlin
+              %a.button.button-actionable Follow
+          %li
+            %img{ src: "http://www.placekitten.com/81/80" }
+            %div
+              %h5 Robert Mapplethorpe
+              %span London
+              %a.button.button-actionable Follow
