--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -44,28 +44,29 @@
   
   .row
     .span5
-      .leftbox{ }
-        .box_header  You may know
-        .leftboxfooter{style:"background-color:white; padding-top: 10px; "}
-          %ul.invite_tiles
-            %li
-              %img{ src: "http://www.placekitten.com/80/80" }
-              %div
-                %h5 Nathaniel Sokoll-Ward
-                %span San Francisco
-                %a.button.button-info Invite
-            %li.invite_tile
-              %img{ src: "http://www.placekitten.com/90/80" }
-              %div
-                %h5 Jonathan Kirst
-                %span Tokyo
-                %a.button.button-info Invite
-            %li.invite_tile
-              %img{ src: "http://www.placekitten.com/60/80" }
-              %div
-                %h5 Becca Lee
-                %span New York City
-                %a.button.button-info Invite
+      - if false
+        .leftbox{ }
+          .box_header  You may know
+          .leftboxfooter{style:"background-color:white; padding-top: 10px; "}
+            %ul.invite_tiles
+              %li
+                %img{ src: "http://www.placekitten.com/80/80" }
+                %div
+                  %h5 Nathaniel Sokoll-Ward
+                  %span San Francisco
+                  %a.button.button-info Invite
+              %li.invite_tile
+                %img{ src: "http://www.placekitten.com/90/80" }
+                %div
+                  %h5 Jonathan Kirst
+                  %span Tokyo
+                  %a.button.button-info Invite
+              %li.invite_tile
+                %img{ src: "http://www.placekitten.com/60/80" }
+                %div
+                  %h5 Becca Lee
+                  %span New York City
+                  %a.button.button-info Invite
       - if @similar_paths
         .leftbox
           .box_header Similar Challenges
