--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,14 @@
       - flash.each do |key, value|
         = content_tag(:div, value, class: "alert alert-#{key}", style: ("margin:60px 0 -50px;" if hide_background))
       = yield
-      
+    %script{ src: "http://connect.facebook.net/en_US/all.js" }
+    :javascript
+      $(function(){
+        $("#invite_facebook_friends").click(function(){
+          FB.init({appId  : "#{ENV['FACEBOOK_KEY']}", frictionlessRequests: true});
+          FB.ui({method: 'apprequests', message: 'Invite others to MetaBright'}); 
+        });
+      })
+    #fb-root
     - if show_footer
       = render "layouts/footer"
