--- a/app/views/pages/connect.html.haml
+++ b/app/views/pages/connect.html.haml
@@ -8,6 +8,9 @@
       %h3{style: "display: inline-block;"} Invite your friends
       %input{ type: "text", placeholder: "Search for friends...", style: "display: inline-block; float: right;"}
       %hr{ style: "margin:0"}
+        
+      %button.button.button_actionable.share YOOOOOOOOO
+      
       %ul.connect_tiles
         %li
           %img{ src: "http://www.placekitten.com/80/80" }
