source fields added to question create

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -738,3 +738,9 @@ h3 { font-size: 28px; }
   } 
 }
 
+
+/* Challenge Creator */
+
+.image_upload{
+  div{ margin-left: 20px; margin-top:0 !important; display: inline-block; }
+}
