style change to edit quetion

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -741,6 +741,23 @@ h3 { font-size: 28px; }
 
 /* Challenge Creator */
 
-.image_upload{
-  div{ margin-left: 20px; margin-top:0 !important; display: inline-block; }
+.question_creator{
+  
+  h4{ margin-left:46px; font-weight: bold; margin-bottom: 10px; }
+  
+  .image_upload{
+    div{ margin-left: 20px; margin-top:0 !important; display: inline-block; }
+  }
 }
+
+
+
+
+
+
+
+
+
+
+
+
