--- a/app/views/tasks/_edit_task_form.html.haml
+++ b/app/views/tasks/_edit_task_form.html.haml
@@ -1,9 +1,9 @@
-= form_for(@task, action: :update, remote: true, "data-type" => "html", html: { class: "form-horizontal edit_task" } ) do |f|
+= form_for(@task, action: :update, remote: true, "data-type" => "html", html: { class: "form-horizontal edit_task question_creator" } ) do |f|
   %div{ style: "margin-bottom:20px; float:right;" }
     = f.submit "Save", :id => "save_question_button", :class => "button button-info"
     %span.button.button-standard{ onclick: "$(this).parents('td').find('div.question_display').show(); $(this).parents('td').find('.edit_task').remove();" } Close
   %div
-    %h4{ style: "margin-left:46px;" } Edit Question
+    %h4 Edit Question
     %div.control-group
       %label.control-label Question
       %div.controls
