--- a/app/views/pages/employer.html.haml
+++ b/app/views/pages/employer.html.haml
@@ -1,5 +1,6 @@
 :css
-  .aboutcontainer{ width: 950px; }
+  body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
+  .aboutcontainer{ width: 950px; background: rgba(80, 114, 150, 0.8); }
 
 #employer.aboutcontainer
   .aboutbox
