employer2 page added

--- a/app/views/pages/employer2.html.haml
+++ b/app/views/pages/employer2.html.haml
@@ -12,25 +12,19 @@
     .body
       %div
         %h2
-          Find Better Candidates
+          Optimize your interviews
         %p
-          MetaBright makes it easy to quickly source high-quality candidates that other recruiting methods miss. Tell us what skills your company needs and we'll connect you with MetaBright users who fit the bill. Recruiting has never been easier. 
+          Never waste your time in an interview again. MetaBright measures and verfies the skills of your job candidates <strong>before</strong> you interview them. Just give your candidates a unique MetaBright URL, and we take care of the rest. 
         %h3
           Our philosophy
         %p
           When evaluating a potential new-hire, we believe the most important thing is whether that person has the skills necessary to do the job. Things like where they went to school or where they previously worked are just distractions from what really matters: Can they perform?
-        %h3
-          How we're different
-        %p
-          Thousands of people use MetaBright to prove their skills. Since we evaluate everyone from Ivy-league grads to self-taught hackers on the same metric, you'll be able to discover the "diamonds in the rough" of the labor market.
         %h3 
           How it works
         %ol
-          %li Identify the skills you need in your next hire.
-          %li MetaBright instantly delivers anonymized results of matching candidates.
-          %li Browse scores and work samples of each.
-          %li Select which people you want to contact.
-          %li Enjoy interviewing candidates your pre-screened candidates.
+          %li Identify the skills where you want your candidates evaluated.
+          %li Include your unique MetaBright URL with your job posting. 
+          %li MetaBright evaluates the skills of each candidate, and you decide who to interview.
         %h3 
           Pricing
         %ul.pricing_table
@@ -39,11 +33,12 @@
             .price
               .price_figure
                 %span.price_number $10
-                %span.price_tenure per month, per user
+                %span.price_tenure
             %ul.features
-              %li Contact 5 Users
-              %li Limited admin panel
-              %li Filter by 1 Challenge
+              %li 10 skill assessments
+              %li Default Challenges
+              %li Full admin panel
+              %li Standard URL
               %li 24/7 Email support
             .price_footer
               %a.action_button{:href => "#"} Select
@@ -51,12 +46,13 @@
             %h3 Intermediate
             .price
               .price_figure
-                %span.price_number $19
-                %span.price_tenure per month, per user
+                %span.price_number $49
+                %span.price_tenure
             %ul.features
-              %li Contact 20 Users
+              %li 100 skill assessments
+              %li Default Challenges
               %li Full admin panel
-              %li Filter by 2 Challenges
+              %li Standard URL
               %li 24/7 Email support
             .price_footer
               %a.action_button{:href => "#"} Select
@@ -64,12 +60,13 @@
             %h3 Professional
             .price
               .price_figure
-                %span.price_number $39
-                %span.price_tenure per month, per user
+                %span.price_number $199
+                %span.price_tenure
             %ul.features
-              %li Contact 50 Users
+              %li 500 skill assessments
+              %li Customizable Challenges
               %li Full admin panel
-              %li Filter by 3+ Challenges
+              %li Customized URL
               %li 24/7 Email support
             .price_footer
               %a.action_button{:href => "#"} Select
@@ -77,12 +74,13 @@
             %h3 Enterprise
             .price
               .price_figure
-                %span.price_number $69
-                %span.price_tenure per month, per user
+                %span.price_number $299
+                %span.price_tenure
             %ul.features
-              %li Contact 100 Users
+              %li 1,000 skill assessments
+              %li Customizable Challenges
               %li Full admin panel
-              %li Filter by 3+ Challenges
+              %li Customized URL
               %li 24/7 Email support
             .price_footer
               %a.action_button{:href => "#"} Select
