--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -38,6 +38,14 @@
                 %ul.dropdown-menu{ role: "button", style: "padding: 0; top:42px; right:-138px; min-width: 312px; min-height: 135px;" }
                   %div
                     %div.nub{ style: "left:150px;" }
+                  %div.leftboxheader Your Groups
+                  %div.leftboxfooter{style:"padding:0; background-color:white; border-bottom: 1px solid #DDD; border-radius: 0; "}
+                    = link_to "#", style: "text-decoration: none;" do
+                      %div.singlegroupentry{ style: "padding: 6px 12px; "}
+                        %img{ src: "http://moonlite-dev.s3.amazonaws.com/objs/8/original.jpg?1367611362", style: "display: inline-block; height: 50px; width: 50px; border-radius: 30px;"}
+                        %div{ style: "margin-left: 5px; display: inline-block; color: gray; vertical-align: middle; "}
+                          %div{ style: "font-size: 20px; line-height: 23px; "} iHub
+                          %div{ style: "font-size: 13px; "} 43 posts today · 281 members
                   %div.leftboxheader Your Challenges
                   %div.leftboxfooter{style:"padding:0; background-color:white; max-height: 412px; overflow-y:auto;"}
                     - current_user.enrollments.includes(:path).where("total_points > 0").order("total_points DESC").each do |e|
