Fixing the edit caption in the creator.

--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -54,7 +54,7 @@
   %div.row{ style: "vertical-align: top; margin: 0 0 20px 0;"}
     %div.span3{ style: "width: 160px; "}
       %a.edit_caption_container.edit_path_settings_button{ style: "cursor: pointer;", title: "Click to edit" }
-        %div.path-caption{ style: "opacity: .75; width: 150px; height: inherit; margin-top: 90px; display: none;" }
+        %div.path-caption{ style: "opacity: 0.75;width: 165px; height: inherit; margin-top: 90px; display: none; position: absolute; background-color: rgb(245, 245, 245); padding-left: 10px; color: black;" }
           %span.caption-title{ style: "font-size:20px; line-height:24px;" } Edit
         = image_tag(@path.path_pic, class: "bigheaderimage")
     %div.span4{ style: "margin-left: 5px;" }
