--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -52,7 +52,7 @@ $success_color: #62c462;
   }
 
   .launchpadcontent { 
-    margin-left: 10px; 
+    margin-left: 0px; 
     margin-top:10px; 
     border-collapse:collapse;
     
@@ -70,14 +70,15 @@ $success_color: #62c462;
       border-radius:6px; 
       border: 1px solid rgba(0, 0, 0, .1); 
       padding: 10px 5px 0 7px; 
-      width: 185px; 
+      width: 21%; 
       vertical-align: top;
       overflow: auto; 
       height:460px;
       
       h3 { font-size: 16px; margin: 0 0 10px 0; font-weight: bold; line-height: 30px; }
       ul { margin: 0; }
-      li { 
+      li {
+        padding: 8px 0;
         border-bottom: 1px solid #EEE; 
         margin: 4px 0px; 
         list-style: none; 
@@ -91,7 +92,7 @@ $success_color: #62c462;
     }
     
     .sectioninfocontainer { 
-      background-color:white; border-radius:6px; border: 1px solid rgba(0, 0, 0, .1);  display:inline-block; width:635px; height:460px; margin: 0 0 0 10px;  padding:10px;  overflow:auto;
+      background-color:white; border-radius:6px; border: 1px solid rgba(0, 0, 0, .1);  display:inline-block; width: 71%; height:460px; margin: 0 0 0 10px;  padding:10px;  overflow:auto;
       .tab_content table td { padding: 0px 10px 0px 10px; height: 40px; border: 0px; border-bottom: 1px solid #DDD; font-size:14px; }
       .tab_content table td p { margin-bottom: 0px; }
       .tabs > li > a:hover {cursor:pointer; }
