--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -92,7 +92,7 @@ $success_color: #62c462;
     }
     
     .sectioninfocontainer { 
-      background-color:white; border-radius:6px; border: 1px solid rgba(0, 0, 0, .1);  display:inline-block; width: 71%; height:460px; margin: 0 0 0 10px;  padding:10px;  overflow:auto;
+      background-color:white; border-radius:6px; border: 1px solid rgba(0, 0, 0, .1);  display:inline-block; width: 71%; height:460px; margin: 0 0 0 1%;  padding:10px;  overflow:auto;
       .tab_content table td { padding: 0px 10px 0px 10px; height: 40px; border: 0px; border-bottom: 1px solid #DDD; font-size:14px; }
       .tab_content table td p { margin-bottom: 0px; }
       .tabs > li > a:hover {cursor:pointer; }
